# python-fastapi-prisma-orm

./: .gitignore  docker-compose.yml  dockerfile  main.py  pyproject.toml  readme.md  schema.prisma
app/: db.py  main.py
app/controller/: people.py
app/resources/: item.py  people.py
migrations/20220524144836_change_collumn_type/: migration.sql
migrations/20220524150227_add_new_column/: migration.sql
migrations/20220524150520_change_column_name_to_varchar/: migration.sql
migrations/20220524175725_adding_user_table_with_relationship_to_post/: migration.sql
prisma/: partial_types.py  schema.prisma
